victory song added, pause button still needs work

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </head>
 
@@ -20,7 +21,7 @@
 
         <div class="row" id="headerPanel">
 
-                <div class="col"></div>
+            <div class="col"></div>
 
             <div class="col-xs-12 col-md-8">
 
@@ -114,6 +115,19 @@
         </div>
 
         <div class="row">
+
+            <div class="col"></div>
+
+            <div class="col-md-4 col-xs-6">
+
+                <div id="musicControl" class="text-center">
+                    <button class="btn btn-dark btn-xs pause-button">
+                        <span class="fa fa-pause"></span> Pause Victory Song</button>
+                </div>
+
+            </div>
+
+            <div class="col"></div>
 
         </div>
 
